# wacky-plugins

./: Cargo.toml  LICENSE  README.md
plugin-lib/: Cargo.toml
plugin-lib/src/: lib.rs
plugin-loader/: Cargo.toml  build.rs
plugin-loader/plugin-shim/: Cargo.toml  build.rs
plugin-loader/plugin-shim/src/: lib.rs
plugin-loader/src/: lib.rs
plugins/bye-world/: Cargo.toml
plugins/bye-world/src/: lib.rs
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
src/: main.rs
