[package]
name = "wacky-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-loader = { path="./plugin-loader" }

[workspace]
resolver ="2"
members = [
    ".",
    "plugin-loader",
    "plugin-loader/plugin-shim",
    "plugin-lib",
    "plugins/hello-world"
]