[package]
name = "wacky-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-loader = { path="./plugin-loader" }
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }

[workspace]
resolver ="2"
members = [
    ".",
    "plugin-loader",
    "plugin-loader/plugin-shim",
    "plugin-lib",
]
