[package]
name = "plugin-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-shim = { path = "./plugin-shim" }
plugin-lib = { path="../plugin-lib" }
once_cell = { version = "1.16.0", features = ["parking_lot"] }
parking_lot = "0.12"
