[package]
name = "plugin-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-lib = { path="../../plugin-lib" }
hello-world = { path = "../../plugins/hello-world" }

[build-dependencies]
toml_edit = "0.15.0"
quote = "1.0.21"
plugin-lib = { path="../../plugin-lib" }
